# femto

./: .travis.yml  CMakeLists.txt
include/femto/: function.h  util.h
include/femto/basis/: piecewise_linear.h  piecewise_poly.h  poly.h  set.h
include/femto/calc/: diff.h
include/femto/fem/: solver.h  stiffness.h
include/femto/geom/: point.h  shapes.h
include/femto/linalg/: matrix.h
include/femto/mesh/: mesh.h
include/femto/node/: nodeset.h
include/femto/poly/: piecewise.h  poly.h
include/femto/quad/: gauss.h
include/femto/util/: array.h
notebooks/: Gaussian quadrature.ipynb  test_notebook.ipynb
src/: function.c  util.c
src/basis/: piecewise_linear.c  piecewise_poly.c  poly.c  set.c
src/calc/: diff.c
src/eqn/: poisson.c
src/fem/: solver.c  stiffness.c
src/geom/: point.c  shapes.c
src/linalg/: matrix.c
src/mesh/: mesh.c
src/poly/: piecewise.c  poly.c
src/quad/: gauss.c
src/util/: array.c
test/: all_tests.h  fto_test.c  fto_test.h  run_tests.c
test/basis/: test_piecewise_linear.c  test_piecewise_linear.h  test_piecewise_poly.c  test_piecewise_poly.h  test_set.c  test_set.h
test/calc/: test_diff.c  test_diff.h
test/fem/: test_solver.c  test_solver.h  test_stiffness.c  test_stiffness.h
test/poly/: test_poly.c  test_poly.h
test/quad/: test_gauss.c  test_gauss.h
